# gobusybox

./: .gitignore  .golangci.yml  .revive.toml  BUILD.bazel  README.md  WORKSPACE  deps.bzl  gobuilds-gopath.sh  gobuilds.sh  gotest.sh  test-external-gopath.sh  test-external-workspaces.sh  test-external.sh  test-multi-simple.sh  test.sh
.circleci/: config.yml
.circleci/images/test-bazel/: Dockerfile
.github/workflows/: go.yml  golangci-lint.yml
modtest/: go.mod  go.sum
modtest/cmd/strace/: strace
modtest/nestedmod/: go.mod  go.sum
modtest/nestedmod/p9ufs/: main.go  p9ufs
src/: BUILD.bazel  WORKSPACE  build.bzl  go.mod  go.sum  gobb.bzl  gobb2.bzl  static_test.bzl  static_test.sh
src/bazeltest/cmd/: BUILD.bazel
src/bazeltest/cmd/dmesg/: BUILD.bazel
src/bazeltest/cmd/goembed/: BUILD.bazel
src/bazeltest/cmd/helloworld/: BUILD.bazel  hello.go  hello2.go
src/bazeltest/cmd/implicitimport/: .gitignore  BUILD.bazel  hello.go
src/bazeltest/cmd/importsamename/: .gitignore  BUILD.bazel  foo.go
src/bazeltest/cmd/stdlibconflict/: .gitignore  BUILD.bazel  main.go
src/bazeltest/pkg/defaultlog/: BUILD.bazel  log.go
src/bazeltest/pkg/log/: BUILD.bazel  log.go
src/bazeltest/pkg/log/log/: BUILD.bazel  log.go
src/cmd/: BUILD.bazel
src/cmd/dmesg/: BUILD.bazel  dmesg
src/cmd/embedvar/: .gitignore  BUILD.bazel  embedvar.go
src/cmd/gencmddeps/: .gitignore  main.go
src/cmd/goanywhere/: .gitignore  main.go
src/cmd/helloworld/: BUILD.bazel  hello.go
src/cmd/makebb/: BUILD.bazel  makebb.go
src/cmd/makebbmain/: .gitignore  BUILD.bazel  main.go
src/cmd/rewritepkg/: .gitignore  BUILD.bazel  main.go
src/pkg/bb/: BUILD.bazel  bb.go  bb_test.go  bbmain_src.go  bbregister_src.go  generate.go
src/pkg/bb/bbinternal/: BUILD.bazel  bb.go  bb_test.go
src/pkg/bb/bbmain/: BUILD.bazel  register.go
src/pkg/bb/bbmain/cmd/: BUILD.bazel  main.go
src/pkg/bb/findpkg/: BUILD.bazel  bb.go  bb_test.go
src/pkg/bb/findpkg/test/goglob/: BUILD.bazel
src/pkg/bb/findpkg/test/goglob/echo/: BUILD.bazel
src/pkg/bb/findpkg/test/goglob/foo/: BUILD.bazel
src/pkg/bb/statik/: BUILD.bazel  statik.go
src/pkg/findpkg/: BUILD.bazel  findpkg.go  findpkg_test.go
src/pkg/golang/: BUILD.bazel  build.go  compiler.go  compiler_test.go
src/pkg/gopkg/: BUILD.bazel  uroot.go
src/pkg/monoimporter/: BUILD.bazel  monoimporter.go
src/pkg/stdgobb/: BUILD.bazel  bb.go  bbmain_src.go  bbregister_src.go  generate.go
src/pkg/stdgobb/bbpkg/: BUILD.bazel  bb.go  bb_test.go
src/pkg/upath/: BUILD.bazel
test/: README.md  all_test.go
test/12-fancy-cmd/: test.sh
test/diamonddep/: test.sh
test/diamonddep/mod1/: go.mod
test/diamonddep/mod2/: go.mod
test/diamonddep/mod3/: go.mod
test/globalvar/: .gitignore  go.mod  main.go
test/goembed/: main.go  test.sh
test/implicitimport/: test.sh
test/invoke/: .gitignore  test.sh
test/invoke/mod/: go.mod
test/mod1/: go.mod  go.sum
test/mod1/cmd/getpid/: .gitignore  getpid.go
test/mod1/cmd/hellowithdep/: hello.go
test/mod1/pkg/hello/: hello.go
test/mod2/: go.mod
test/mod2/pkg/exthello/: hello.go
test/mod2/pkg/hello/: hello.go
test/mod3/: go.mod
test/mod3/pkg/hello/: hello.go
test/mod4/: go.mod
test/mod4/pkg/hello/: hello.go
test/mod5/: go.mod  go.sum
test/mod5/cmd/mod5hello/: .gitignore  mod5hello.go
test/mod6/: go.mod
test/mod6/cmd/mod6hello/: .gitignore  mod6hello.go
test/nameconflict/: test.sh
test/nameconflict/cmd/nameconflict/: main.go  otherfile.go
test/nested/: go.mod  test.sh
test/nested/nestedmod/: go.mod
test/normaldeps/: test.sh
test/normaldeps/mod1/: go.mod
test/normaldeps/mod2/: go.mod
test/requestconflict/: test.sh
test/requestconflict/mod5/: go.mod  go.sum
test/requestconflict/mod5/cmd/mod5hello/: mod5hello.go
test/requestconflict/mod6/: go.mod
test/requestconflict/mod6/pkg/mod5hello/: hello.go
test/resolve-modules/: go.mod  go.sum
vendorsrc/: Gopkg.toml
vendorsrc/cmd/makebb/: bb
vendortest/: Gopkg.toml  dependencies.go  go.mod  go.sum
vendortest/cmd/nameconflict/: main.go  otherfile.go
vendortest/cmd/namedexternal/: .gitignore  hello.go
vendortest/cmd/strace/: strace
