load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# gazelle:exclude test
# gazelle:exclude vendortest
# gazelle:prefix github.com/u-root/gobusybox
# gazelle:go_naming_convention import

gazelle(
    name = "gazelle",
)

buildifier(
    name = "buildifier",
)
