load("//:gobb.bzl", "go_busybox_binary")
load("//:gobb2.bzl", "go_busybox")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("//:static_test.bzl", "static_test")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# gazelle:prefix github.com/u-root/gobusybox/src
# gazelle:go_naming_convention import

go_busybox_binary(
    name = "bb",
    commands = [
        "//bazeltest/cmd/helloworld:helloworld_lib",
        "//bazeltest/cmd/dmesg:dmesg_lib",
        "//bazeltest/cmd/importsamename:importsamename_lib",
        "//bazeltest/cmd/implicitimport:implicitimport_lib",
    ],
)

go_busybox(
    name = "bb2",
    cmds = [
        "//bazeltest/cmd/dmesg",
        "//bazeltest/cmd/helloworld",
        "//bazeltest/cmd/implicitimport",
        "//bazeltest/cmd/importsamename",
        "//cmd/embedvar",
    ],
)

go_busybox(
    name = "bb2_arm64",
    cmds = [
        "//bazeltest/cmd/dmesg",
        "//bazeltest/cmd/helloworld",
        "//bazeltest/cmd/implicitimport",
        "//bazeltest/cmd/importsamename",
        "//bazeltest/cmd/stdlibconflict",
        "//cmd/embedvar",
    ],
    goarch = "arm64",
    goos = "linux",
    pure = "on",
)

static_test(
    name = "bb2_static_test",
    target = ":bb2",
)

static_test(
    name = "bb2_arm64_static_test",
    target = ":bb2_arm64",
)

sh_library(
    name = "static_test",
    srcs = [":static_test.sh"],
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle",
)

buildifier(
    name = "buildifier",
)

# uroot_linux_core_cmds is all commands in //cmds/core/... except for bind and
# unmount which are Plan 9 only.
uroot_linux_core_cmds = [
    "@com_github_u-root_u-root//cmds/core/basename",
    "@com_github_u-root_u-root//cmds/core/cat",
    "@com_github_u-root_u-root//cmds/core/chmod",
    "@com_github_u-root_u-root//cmds/core/chroot",
    "@com_github_u-root_u-root//cmds/core/cmp",
    "@com_github_u-root_u-root//cmds/core/comm",
    "@com_github_u-root_u-root//cmds/core/cp",
    "@com_github_u-root_u-root//cmds/core/cpio",
    "@com_github_u-root_u-root//cmds/core/date",
    "@com_github_u-root_u-root//cmds/core/dd",
    "@com_github_u-root_u-root//cmds/core/df",
    "@com_github_u-root_u-root//cmds/core/dhclient",
    "@com_github_u-root_u-root//cmds/core/dirname",
    "@com_github_u-root_u-root//cmds/core/dmesg",
    "@com_github_u-root_u-root//cmds/core/echo",
    "@com_github_u-root_u-root//cmds/core/elvish",
    "@com_github_u-root_u-root//cmds/core/false",
    "@com_github_u-root_u-root//cmds/core/find",
    "@com_github_u-root_u-root//cmds/core/free",
    "@com_github_u-root_u-root//cmds/core/fusermount",
    "@com_github_u-root_u-root//cmds/core/gpgv",
    "@com_github_u-root_u-root//cmds/core/gpt",
    "@com_github_u-root_u-root//cmds/core/grep",
    "@com_github_u-root_u-root//cmds/core/gzip",
    "@com_github_u-root_u-root//cmds/core/hexdump",
    "@com_github_u-root_u-root//cmds/core/hostname",
    "@com_github_u-root_u-root//cmds/core/hwclock",
    "@com_github_u-root_u-root//cmds/core/id",
    "@com_github_u-root_u-root//cmds/core/init",
    "@com_github_u-root_u-root//cmds/core/insmod",
    "@com_github_u-root_u-root//cmds/core/installcommand",
    "@com_github_u-root_u-root//cmds/core/io",
    "@com_github_u-root_u-root//cmds/core/ip",
    "@com_github_u-root_u-root//cmds/core/kexec",
    "@com_github_u-root_u-root//cmds/core/kill",
    "@com_github_u-root_u-root//cmds/core/lddfiles",
    "@com_github_u-root_u-root//cmds/core/ln",
    "@com_github_u-root_u-root//cmds/core/lockmsrs",
    "@com_github_u-root_u-root//cmds/core/losetup",
    "@com_github_u-root_u-root//cmds/core/ls",
    "@com_github_u-root_u-root//cmds/core/lsdrivers",
    "@com_github_u-root_u-root//cmds/core/lsmod",
    "@com_github_u-root_u-root//cmds/core/man",
    "@com_github_u-root_u-root//cmds/core/md5sum",
    "@com_github_u-root_u-root//cmds/core/mkdir",
    "@com_github_u-root_u-root//cmds/core/mkfifo",
    "@com_github_u-root_u-root//cmds/core/mknod",
    "@com_github_u-root_u-root//cmds/core/mktemp",
    "@com_github_u-root_u-root//cmds/core/more",
    "@com_github_u-root_u-root//cmds/core/mount",
    "@com_github_u-root_u-root//cmds/core/msr",
    "@com_github_u-root_u-root//cmds/core/mv",
    "@com_github_u-root_u-root//cmds/core/netcat",
    "@com_github_u-root_u-root//cmds/core/ntpdate",
    "@com_github_u-root_u-root//cmds/core/pci",
    "@com_github_u-root_u-root//cmds/core/ping",
    "@com_github_u-root_u-root//cmds/core/printenv",
    "@com_github_u-root_u-root//cmds/core/ps",
    "@com_github_u-root_u-root//cmds/core/pwd",
    "@com_github_u-root_u-root//cmds/core/readlink",
    "@com_github_u-root_u-root//cmds/core/rm",
    "@com_github_u-root_u-root//cmds/core/rmmod",
    "@com_github_u-root_u-root//cmds/core/rsdp",
    "@com_github_u-root_u-root//cmds/core/scp",
    "@com_github_u-root_u-root//cmds/core/seq",
    "@com_github_u-root_u-root//cmds/core/shasum",
    "@com_github_u-root_u-root//cmds/core/shutdown",
    "@com_github_u-root_u-root//cmds/core/sleep",
    "@com_github_u-root_u-root//cmds/core/sluinit",
    "@com_github_u-root_u-root//cmds/core/sort",
    "@com_github_u-root_u-root//cmds/core/sshd",
    "@com_github_u-root_u-root//cmds/core/strace",
    "@com_github_u-root_u-root//cmds/core/strings",
    "@com_github_u-root_u-root//cmds/core/stty",
    "@com_github_u-root_u-root//cmds/core/switch_root",
    "@com_github_u-root_u-root//cmds/core/sync",
    "@com_github_u-root_u-root//cmds/core/tail",
    "@com_github_u-root_u-root//cmds/core/tar",
    "@com_github_u-root_u-root//cmds/core/tee",
    "@com_github_u-root_u-root//cmds/core/tr",
    "@com_github_u-root_u-root//cmds/core/true",
    "@com_github_u-root_u-root//cmds/core/truncate",
    "@com_github_u-root_u-root//cmds/core/ts",
    "@com_github_u-root_u-root//cmds/core/umount",
    "@com_github_u-root_u-root//cmds/core/uname",
    "@com_github_u-root_u-root//cmds/core/uniq",
    "@com_github_u-root_u-root//cmds/core/unshare",
    "@com_github_u-root_u-root//cmds/core/uptime",
    "@com_github_u-root_u-root//cmds/core/wc",
    "@com_github_u-root_u-root//cmds/core/wget",
    "@com_github_u-root_u-root//cmds/core/which",
    "@com_github_u-root_u-root//cmds/core/yes",
]

go_busybox(
    name = "uroot_bb",
    cmds = uroot_linux_core_cmds,
)
