load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "embedvar_lib",
    srcs = ["embedvar.go"],
    importpath = "github.com/u-root/gobusybox/src/cmd/embedvar",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "embedvar",
    embed = [":embedvar_lib"],
    visibility = ["//visibility:public"],
)
