load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//:build.bzl", "go_busybox_command")

go_library(
    name = "helloworld_lib",
    srcs = ["hello.go"],
    importpath = "github.com/u-root/gobusybox/src/cmd/helloworld",
    visibility = ["//visibility:private"],
)

go_busybox_command(
    name = "helloworld",
    srcs = ["hello.go"],
    importpath = "github.com/u-root/gobusybox/src/cmd/helloworld",
    visibility = ["//visibility:public"],
)
