load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "makebbmain_lib",
    srcs = ["main.go"],
    importpath = "github.com/u-root/gobusybox/src/cmd/makebbmain",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/bb",
        "//pkg/uflag",
    ],
)

go_binary(
    name = "makebbmain",
    embed = [":makebbmain_lib"],
    visibility = ["//visibility:public"],
)
