load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rewritepkg_lib",
    srcs = ["main.go"],
    importpath = "github.com/u-root/gobusybox/src/cmd/rewritepkg",
    visibility = ["//visibility:private"],
    deps = [
        "//src/pkg/bb",
        "//src/pkg/monoimporter",
        "//src/pkg/uflag",
    ],
)

go_binary(
    name = "rewritepkg",
    embed = [":rewritepkg_lib"],
    visibility = ["//visibility:public"],
)
