load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bb",
    srcs = ["bb.go"],
    importpath = "github.com/u-root/gobusybox/src/pkg/bb",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_u_root_uio//cp",
        "@org_golang_x_tools//go/ast/astutil",
        "@org_golang_x_tools//go/packages",
        "@org_golang_x_tools//imports",
    ],
)
