load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "monoimporter",
    srcs = ["monoimporter.go"],
    importpath = "github.com/u-root/gobusybox/src/pkg/monoimporter",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bb",
        "@org_golang_x_tools//go/gcexportdata",
        "@org_golang_x_tools//go/packages",
    ],
)
