load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "upath",
    srcs = ["symlink.go"],
    importpath = "github.com/u-root/gobusybox/src/pkg/upath",
    visibility = ["//visibility:public"],
)

go_test(
    name = "upath_test",
    srcs = ["symlink_test.go"],
    embed = [":upath"],
)
