load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dmesg_lib",
    srcs = ["dmesg.go"],
    importpath = "github.com/u-root/gobusybox/src/bazeltest/cmd/dmesg",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_sys//unix"],
)

go_binary(
    name = "dmesg",
    embed = [":dmesg_lib"],
    visibility = ["//visibility:public"],
)
