load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//:gobb.bzl", "go_busybox_library")

go_busybox_library(
    name = "helloworld_lib",
    srcs = [
        "hello.go",
        "hello2.go",
    ],
    importpath = "github.com/u-root/gobusybox/src/bazeltest/cmd/helloworld",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "helloworld",
    embed = [":helloworld_lib"],
    visibility = ["//visibility:public"],
)
