load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "helloworld_lib",
    srcs = [
        "hello.go",
        "hello2.go",
    ],
    importpath = "github.com/u-root/gobusybox/src/bazeltest/cmd/helloworld",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "helloworld",
    embed = [":helloworld_lib"],
    visibility = ["//visibility:public"],
)
