load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "implicitimport_lib",
    srcs = ["hello.go"],
    importpath = "github.com/u-root/gobusybox/src/bazeltest/cmd/implicitimport",
    visibility = ["//visibility:private"],
    deps = ["//bazeltest/pkg/defaultlog"],
)

go_binary(
    name = "implicitimport",
    embed = [":implicitimport_lib"],
    visibility = ["//visibility:public"],
)
