load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//:gobb.bzl", "go_busybox_library")

go_busybox_library(
    name = "importsamename_lib",
    srcs = ["foo.go"],
    importpath = "github.com/u-root/gobusybox/src/bazeltest/cmd/importsamename",
    visibility = ["//visibility:public"],
    deps = [
        "//bazeltest/pkg/log",
        "//bazeltest/pkg/log/log",
    ],
)

go_binary(
    name = "importsamename",
    embed = [":importsamename_lib"],
    visibility = ["//visibility:public"],
)
