load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bbinternal",
    srcs = ["bb.go"],
    importpath = "github.com/u-root/gobusybox/src/pkg/bb/bbinternal",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/findpkg",
        "//pkg/golang",
        "@org_golang_x_tools//go/ast/astutil",
        "@org_golang_x_tools//go/packages",
    ],
)
