load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

exports_files(["main.go"])

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/u-root/gobusybox/src/pkg/bb/bbmain/cmd",
    visibility = ["//visibility:private"],
    deps = ["//pkg/bb/bbmain"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
