load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "echo_lib",
    srcs = ["main.go"],
    importpath = "github.com/u-root/gobusybox/src/pkg/bb/findpkg/test/goglob/echo",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "echo",
    embed = [":echo_lib"],
    visibility = ["//visibility:public"],
)
